--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -4,12 +4,15 @@ on:
   workflow_dispatch:
 
 env:
-  PYTHON_VERSION: '3.12'
   VCPKG_LIBRARY_LINKAGE: dynamic
 
 jobs:
   build-windows:
     runs-on: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.10', '3.11', '3.12', '3.13', '3.14']
     env:
       SKBUILD_CONFIG: Release
       VCPKG_TARGET_TRIPLET: x64-windows-release
@@ -20,7 +23,8 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ env.PYTHON_VERSION }}
+        python-version: ${{ matrix.python-version }}
+        allow-prereleases: true
         
     - name: Upgrade pip & install deps
       run: |
@@ -102,7 +106,7 @@ jobs:
     - name: Upload Windows wheel
       uses: actions/upload-artifact@v4
       with:
-        name: windows-wheel
+        name: windows-wheel-${{ matrix.python-version }}
         path: 'dist/*.whl'
 
   build-linux:
@@ -125,7 +129,7 @@ jobs:
 
       - name: Build Linux wheel
         env:
-          CIBW_BUILD: "cp312-manylinux*_x86_64"
+          CIBW_BUILD: "cp310-manylinux*_x86_64 cp311-manylinux*_x86_64 cp312-manylinux*_x86_64 cp313-manylinux*_x86_64 cp314-manylinux*_x86_64"
           CIBW_ARCHS_LINUX: "x86_64"
           CIBW_MANYLINUX_X86_64_IMAGE: "manylinux_2_28"
           CIBW_CONTAINER_OPTIONS: "-v /tmp/vcpkg_cache:/opt/vcpkg"
