--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,15 @@ authors = [
     {name = "Nilas Tiago", email = "nilascontact@gmail.com"},
 ]
 description = "Lightspeed video decoding directly into tensors!"
-requires-python = ">=3.13"
+requires-python = ">=3.10"
 license = {text = "AGPL-3.0"}
 classifiers = [
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "License :: OSI Approved :: GNU Affero General Public License v3",
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX :: Linux",
